# COVID-19_crawler

./: CMakeLists.txt  README.md
include/: AreaStat.hpp  Count.hpp  Exceptions.hpp  GetHTML.hpp  Statistics.hpp  log.hpp
src/: AreaStat.cpp  Statistics.cpp  main.cpp
